# mutica-lsp

./: .gitignore  .vscodeignore  Cargo.toml  LICENSE  README.md  build.sh  language-configuration.json  package.json  package.sh  pnpm-lock.yaml  setup.sh  tsconfig.json
examples/: either.mu  factorial.mu  import.mu  iter.mu  list.mu  list_package.mu  maybe.mu  pair.mu  tree.mu  valueless_match.mu
examples/lib/: any.mu  combinator.mu  controlflow.mu  int.mu  list.mu  maybe.mu  panic.mu  rbtree.mu  sort.mu  string.mu
src/: main.rs
src-vscode/: extension.ts
src/lsp/: ast_processor.rs  backend.rs  completion.rs  mod.rs  references.rs  semantic.rs  utils.rs
syntaxes/: mutica.tmGrammar.json
