[package]
name = "mutica-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
mutica = "0.1.0"
tower-lsp = "0.20.0"
serde_json = "1.0.145"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
mutica-compiler = { version = "0.1.0", path = "../Mutica/mutica-compiler" }
mutica-semantic = { version = "0.1.0", path = "../Mutica/mutica-semantic" }
